--- a/common.css
+++ b/common.css
@@ -8,11 +8,6 @@
     text-overflow: ellipsis;
 }
 
-li {
-    /* text-indent: -1em; */
-    /* padding-left: 1em; */
-}
-
 ul {
     list-style-position: inside;
     text-align: center;
@@ -26,9 +21,7 @@ ul {
 }
 
 .content {
-    padding: 16px;
-    padding-left: env(safe-area-inset-left);
-    padding-right: env(safe-area-inset-right);
+    padding: 16px env(safe-area-inset-right) 16px env(safe-area-inset-left);
 }
 
 html {
